--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -41,19 +41,23 @@
 }
 
 .origin-story-title {
-    width: 32%;
-    animation-duration: 2s;
+     width: 32%;
+    /*animation-duration: 2s;
     animation-name: flash;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1; */
+    margin-left: 2.5%;
+    opacity: 0;
 }
 
 @keyframes flash {
     from {
         transform: scale(0.1);
+        opacity: 0;
     }
 
     to {
         transform: scale(1);
+        opacity: 1;
     }
 }
 
