--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -136,7 +136,19 @@
     left: 46%;
 }
 
+.youtube-container{
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 70%;
+}
+
 .landing-video {
+    position: absolute;
+    top: 0!important;
+    left: 0!important;
+    width: 100%!important;
+    height: 100%!important;
     border: 10px solid #000;
 }
 
@@ -624,6 +636,24 @@
         position: absolute;
         left: 10%;
         top: 38%;
+        border: 6px solid #000;
+    }
+    .mobile-youtube-block {
+        width: 100%;
+        position: absolute;
+        top: 10%;
+    }
+    .youtube-container{
+        position: relative;
+    }
+    .landing-video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 80%;
+        left: 10%;
+        top: 38%;
+        height: 80%;
         border: 6px solid #000;
     }
     .team-block {
