--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -49,6 +49,10 @@
     src: url('../fonts/LDFComicSansLight.ttf');
 }
 
+body {
+    background-color: #000;
+}
+
 .no-display {
     display: none;
 }
@@ -61,6 +65,88 @@
 .our-team-back-mobile, .join-us-img-mobile, .footer-back-mobile, .story-block-mobile {
     display: none;
 }
+
+/* PRELOADER */
+.preloader {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 11;
+    text-align: center;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    transition-duration: 500ms;
+    -webkit-transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+    -webkit-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+    overflow: hidden;
+    transition-delay: 0.6s;
+  }
+  .preloader * {
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    transition-duration: 500ms;
+    -webkit-transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+    -webkit-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+  }
+  .preloader .layer {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #fffdff;
+    transition-delay: 0.3s;
+  }
+  .preloader .inner {
+    display: inline-block;
+    text-align: center;
+    position: relative;
+    z-index: 2;
+    margin: 0 auto;
+  }
+  .preloader .inner span {
+    color: #000;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 13px;
+  }
+  .preloader .inner figure {
+    display: block;
+    margin-bottom: 20px;
+    transition-delay: 0.1s;
+  }
+  .preloader .inner figure img {
+    height: 80px;
+    transform: translateX(-7px);
+  }
+  
+  /* PAGE LOADED */
+  .page-loaded .preloader {
+    left: -100%;
+  }
+  
+  .page-loaded .preloader .inner figure {
+    opacity: 0;
+    transform: scale(1.5);
+  }
+  
+  .page-loaded .preloader .inner span {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  
+  .page-loaded .preloader .layer {
+    left: -100%;
+  }
 
 .navbar {
     width: 100%;
@@ -125,22 +211,26 @@
     right: 20px;
     border-radius: 50px;
     padding: 10px 30px;
+    background-color: #000!important;
+    color: #fff!important;
 }
 
 .mint-btn {
+    background-color: #000!important;
+    color: #fff!important;
     position: absolute;
     font-size: 28px;
     border-radius: 50px;
     padding: 10px 30px;
-    top: 25%;
-    left: 46%;
+    top: 60%;
+    left: 45%;
 }
 
 .youtube-container{
     position: relative;
     width: 100%;
     height: 0;
-    padding-bottom: 70%;
+    padding-bottom: 58%;
 }
 
 .landing-video {
@@ -148,8 +238,9 @@
     top: 0!important;
     left: 0!important;
     width: 100%!important;
-    height: 100%!important;
+    height: 99%!important;
     border: 10px solid #000;
+    background-color: #000;
 }
 
 .badboyz {
@@ -319,6 +410,7 @@
     z-index: -1;
     left: 44.8%;
     top: 15px;
+    display: none;
 }
 
 .fixed {
@@ -632,10 +724,12 @@
         position: relative;
     }
     .landing-video {
-        width: 80%;
         position: absolute;
-        left: 10%;
-        top: 38%;
+        width: 80%!important;
+        left: 10%!important;
+        top: 55%!important;
+        background-color: #000;
+        height: 80%!important;
         border: 6px solid #000;
     }
     .mobile-youtube-block {
@@ -645,16 +739,6 @@
     }
     .youtube-container{
         position: relative;
-    }
-    .landing-video {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 80%;
-        left: 10%;
-        top: 38%;
-        height: 80%;
-        border: 6px solid #000;
     }
     .team-block {
         top: 20%;
