story image changed

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -808,7 +808,7 @@ body {
         padding: 20px 0 140px 0;
     }
     .origin-story {
-        background: url(../images/mobile/originstory.png) no-repeat;
+        background: url(../images/mobile/originstory.jpg) no-repeat;
         background-size: 100% 100%;
     }
     .percent25-text {
